Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug: category was lost wan clicking on prev/next month in month.php
 - Fixed bug 1211406: User Access Control enabled: has been displayed in 2 tabs
 - Fixed bug 1212672: Install script - javascript errors
 - Fixed bug 1212667: Install script - Database Type Problem
 - Added logic to only spermit etting persistent connections if allowed and not CGI
 - Added ability to delete user info from webcal tables for ldap and postnuke auth
 - Fixed bug 1209649: Undefined variable in html_for_event_day_at_a_glance
 - Patch 1021410: Unobtrusive JS for event popups
 - Fixed bug 1205151: use of undefined variable in edit_entry.php
 - Fixed bug 1205680: upcoming.php was including unapproved.  will now use
   user preferences for displaying unapproved.
 - Patch 810460: fix length of salt in call to crypt for NIS authentication
 - Added new view (view_r.php) that will display similar to day.php and week.php
   do now except for multiple users.
 - Patch 1090615: read/write remote ical subscription (icalclient.php)
 - Don't allow LDAP or NIS as option in install/index.php if modules are
   not available.
 - Patch 1206167: use define for constant variables
 - Patch 1206560: allow site extras in reports
 - Added Development/Production environment setting on install page.
   This will toggle assertion stacktraces and SQL errors being displayed
   on the web browser.
 - Patch 1175032: advanced user access control
 - Patch 1205023: fixed missing translation in import.php
 - Patch 1156386: improved placement and sizing of event popups
 - Patch 1111582: Add iCal FreeBusy support
 - Patch 1163497: Add RSS feed
 - Patch 1171807: reminder sent late if cron run at exact second of reminder
 - Updated Polish translation
 - Updated German translation
 - Updated French translation
 - Updated Norwegian translation
Version 1.0.0 (17 May 2005) aka "Buster"
 - Fixed bug 1202127: [ 1187734 ] Timezone offset problems still exist.