@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1218113: iCal ATTENDEE error if event is deleted
       1211406: User Access Control enabled: has been displayed in 2 tabs
       1212672: Install script - javascript errors
       1212667: Install script - Database Type Problem
